--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -2,5 +2,9 @@
 <resources>
 
     <string name="app_name">记流器</string>
+    <string name="start_time">开始:</string>
+    <string name="end_time">结束:</string>
+    <string name="reset">停止</string>
+    <string name="add">添加</string>
 
 </resources>
