--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">SmartCounter</string>
+    <string name="start_time">start time:</string>
+    <string name="end_time">end time:</string>
+    <string name="reset">Reset</string>
+    <string name="add">add</string>
 </resources>
