--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">智能计数器</string>
+    <string name="app_name">简易计数器</string>
     <string name="start_time">开始:</string>
     <string name="end_time">结束:</string>
     <string name="reset">停止</string>
